# cleanup_groups

./: .gitignore  Pipfile  README.md  cleanup_groups.py  pyproject.toml
config/: config.ini
