[tool.poetry]
name = "cleanup-groups"
version = "0.1.0"
description = ""
authors = ["Ademar Peixoto <bigua.kun@gmail.com>"]
readme = "README.md"
packages = [{include = "cleanup_groups"}]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.25.0"
configparser = "^5.3.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
